# data-bridge

./: .cursorignore  .dockerignore  .gitignore  Cargo.toml  QUICK_START.md  README.md  TERMINOLOGY.md  build.rs  fors33_t3thr_license_public.pem
.github/workflows/: release.yml
config/: alchemy_websocket.toml  binance_futures_websocket.toml  binance_spot_websocket.toml  default.toml  grpc_client.toml  infura_websocket.toml  kafka_consumer.toml  kraken_websocket.toml  mqtt_consumer.toml  mysql_cdc.toml  postgres_cdc.toml  syslog_server.toml  v2_grpc_example.toml  v2_kafka_example.toml  v2_mqtt_example.toml  v2_rest_example.toml  v2_rest_fred.example.toml  v2_rest_inventory.example.toml
config/templates/: alchemy_websocket.toml  binance_websocket.toml  file_batch.toml  grpc_client.toml  infura_websocket.toml  kafka_consumer.toml  kraken_websocket.toml  mqtt_consumer.toml  mysql_cdc.toml  postgres_cdc.toml  rest_polling.toml  syslog_server.toml  udp_raw_server.toml
docs/: bridge-release-notes-0.5.0.md  bridge-release-notes-0.6.0.md
examples/: sample_input.csv
pkg/: .dockerignore  Dockerfile  README.md
proto/: datastream.proto
src/: batch_limits.rs  connector_cdc_mysql.rs  connector_cdc_postgres.rs  connector_file.rs  connector_grpc.rs  connector_message_bus.rs  connector_rest.rs  connector_syslog.rs  connector_udp_raw.rs  connector_websocket.rs  main.rs  tls_meta.rs  tls_verifier.rs  utils.rs
src/commands/: generate.rs  migrate.rs  mod.rs  run.rs  validate.rs  wizard.rs
